# mini-os

./: .gitignore  .travis.yml  CODING_STYLE  Config.mk  Makefile  README  balloon.c  blkfront.c  build-opam.sh  daytime.c  events.c  gnttab.c  hypervisor.c  kernel.c  libminios-xen.pc.in  lwip-arch.c  main.c  minios-xen-pv.opam  minios-xen-pvh.opam  minios.mk  mm.c  netfront.c  opam  sched.c  shutdown.c  test.c  tpm_tis.c  tpmback.c
arch/arm/: arm32.S  balloon.c  gic.c  minios-arm32.lds  mm.c  setup.c
arch/x86/: Makefile  arch.mk  balloon.c  events.c  minios-x86.lds.S  minios-x86_32.lds  minios-x86_64.lds  mm.c  sched.c  setup.c  time.c  traps.c  x86_32.S  x86_64.S  x86_hvm.S
arch/x86/testbuild/: all-no  all-yes  balloon  newxen  newxen-yes
config/: MiniOS.mk
console/: console.c  xenbus.c  xencons_ring.c
include/: asm_macros.h  assert.h  balloon.h  compiler.h  console.h  e820.h  events.h  gnttab.h  hypervisor.h  inttypes.h  kernel.h  lib.h  mm.h  netfront.h  paravirt.h  shutdown.h  string.h  strings.h  xenbus.h  xmalloc.h
include/arm/: arch_mm.h  asm_macros.h
include/posix/: termios.h
include/sys/: cdefs.h
include/x86/: arch_mm.h  asm_macros.h  desc.h  os.h
include/x86/x86_32/: hypercall-x86_32.h
include/x86/x86_64/: hypercall-x86_64.h
include/xen/arch-x86/: xen-x86_32.h  xen-x86_64.h
lib/: assert.c  math.c  memmove.c  printf.c  sys.c  xmalloc.c
scripts/: travis-build
xenbus/: xenbus.c
