opam-version: "1.2"
name: "minios-xen-pvh"
version: "dev"
maintainer: "mirageos-devel@lists.openmirage.org"
authors: "Thomas Leonard <talex5@gmail.com>"
homepage: "https://github.com/talex5/mini-os"
bug-reports: "https://github.com/mirage/mini-os/issues"
license: "BSD + some optional GPL components"
dev-repo: "https://github.com/talex5/mini-os.git"
build: [
  [make "debug=n"
  "OPAM_NAME=minios-xen-pvh" "CONFIG_PARAVIRT=n"]
]
install: [
  [make "install" "LIBDIR=%{prefix}%/lib" "INCLUDEDIR=%{prefix}%/include"
  "OPAM_NAME=minios-xen-pvh" "CONFIG_PARAVIRT=n"]
]
remove: [
  ["rm" "-r"
    "%{prefix}%/lib/minios-xen-pvh"
    "%{prefix}%/lib/pkgconfig/libminios-xen-pvh.pc"
    "%{prefix}%/include/minios-xen-pvh"
  ]
]
